# eigenlayer-ai-agent

./: .flake8  .gitignore  Dockerfile  README.md  config.json  eigenlayer_config.json  pyproject.toml  setup.py  worker.js  wrangler.toml
.github/workflows/: ci.yml  cloudflare-deploy.yml
abis/: AIAgent.json  AIAgentRegistry.json  AIOracleServiceManager.json  PredictionMarketHook.json
agent/: __init__.py  __main__.py  agent.py  cli.py  interface.py  llm.py  manager.py  oracle.py  registry.py  utils.py
agent/utils/: __init__.py  config.py  logger.py  web3.py
cloudflare/: package.json  pyodide-loader.js  worker.js  wrangler.toml
container/: apptainer.def
tests/contracts/: __init__.py  test_agent_connection.py  test_agent_oracle.py  test_oracle_direct.py
tests/integration/: __init__.py  test_agent.py  test_market.py  test_oracle.py  test_prediction_market.py  test_utils.py
