[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eigenlayer-ai-agent"
version = "0.1.0"
description = "AI Agent with EigenLayer integration"
authors = ["Vista Labs"]
readme = "README.md"
repository = "https://github.com/vistalabs-org/eigenlayer-ai-agent"
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
web3 = ">=6.0.0"
requests = ">=2.25.0"
python-dotenv = ">=0.15.0"
click = ">=8.0.0"
pydantic = ">=2.0.0"
setuptools = ">=42.0.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
agent = "agent.__main__:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88